libs/natparse/src/test/resources/projects/invalidModuleTypeTests/Natural-Libraries/ALIB/SUBGDA.NSN
DEFINE DATA
PARAMETER USING MYGDA
END-DEFINE

END
